# sortodoco_file-organizer

./: README.md  pyproject.toml
scripts/: dev_sandbox.py
src/sortodoco/cli/: app.py  errors.py  io.py  main.py  paths.py
src/sortodoco/domain/: ignore_rules.py  models.py
src/sortodoco/infra/: config.py  fs.py
src/sortodoco/rules/: extensions.json  ignore_rules.json
src/sortodoco/services/: executor.py  planner.py
src/sortodoco/ui/: __init__.py  app.py  main_window.py  state.py  theme.py
src/sortodoco/ui/components/: __init__.py  sidebar.py
src/sortodoco/ui/views/: __init__.py  base.py  dashboard.py  history.py  ignore_editor.py  plan_preview.py  rules_editor.py  scan_setup.py  settings.py
src/sortodoco/ui/widgets/: __init__.py  badge.py  card.py  confirm_dialog.py  data_table.py  loading.py  summary_chip.py  toast.py
src/sortodoco/utils/: filters.py  rules_loader.py
tests/: dev_sandbox_test.py  test_ignore_rules_loader.py  test_sandbox_smoke.py
