[project]
name = "sortodoco"
version = "0.1.0"
description = "Local-first file organizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "watchdog",
  "send2trash",
  "rich",
]

[project.scripts]
sortodoco = "sortodoco.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sortodoco"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
