[project]
name = "sortodoco"
version = "0.1.0"
description = "Local-first file organizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "watchdog",
  "send2trash",
  "rich",
  "customtkinter>=5.2.0",
  "darkdetect>=0.8.0",
  "pillow>=10.0.0",
]

[project.scripts]
sortodoco = "sortodoco.cli.main:main"
sortodoco-gui = "sortodoco.ui.app:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sortodoco"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
